# bmsmon

./: .gitignore  CLAUDE.md  README.md  bmsmon.py
.github/workflows/: build-server.yml
android/: .gitignore  README.md  settings.gradle.kts
docs/: architecture-review-2026-07-01.md  ble-connectivity-investigation.md  range-backtest-2026-07.md
server/: Dockerfile  docker-compose.dev.yml  pyproject.toml
server/app/: caching.py  charge_sessions.py  config.py  main.py  models.py  ratelimit.py  util.py
server/app/auth/: authentik.py  device_jwt.py  enroll.py
server/app/db/: partitions.py  pool.py  queries.py  rollup.py  schema.sql
server/app/live/: bus.py
server/app/routers/: api_device.py  share.py  web.py  ws.py
server/scripts/: seed_dev.py
server/tests/: conftest.py  test_alert_config.py  test_body_limits.py  test_caching.py  test_cells.py  test_charge_sessions.py  test_config.py  test_enroll.py  test_enroll_rate_limit.py  test_eta_full_min.py  test_gps_retention.py  test_gzip_responses.py  test_health.py  test_history.py  test_ingest_jwt.py  test_queries.py  test_range_config.py  test_rollup.py  test_samples_bounds.py  test_share_public.py  test_static_cache.py  test_track.py  test_trends.py  test_web_auth.py  test_web_charge_sessions.py  test_web_history.py  test_web_notes.py  test_web_shares.py  test_web_temp_config.py  test_web_track.py  test_web_trends.py  test_ws_live.py
server/tools/: fake_feeder.py
web/: .gitignore  index.html  package-lock.json  package.json  preview.html  tsconfig.json  vite.config.share.ts  vite.config.ts
web/src/: App.tsx  (+22 more)
(+285 files in other folders)
