[project]
name = "bmsmon-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "asyncpg>=0.29",
  "pydantic>=2.7",
  "pyjwt>=2.8",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
